CHANGE main.js - prevent layout shift

--- a/resources/scss/ceres/views/PageDesign/_header.scss
+++ b/resources/scss/ceres/views/PageDesign/_header.scss
@@ -22,3 +22,11 @@
         }
     }
 }
+
+.fixed-top {
+    position: initial;
+
+    &.realy-fixed {
+        position: fixed;
+    }
+}
